packages/parser/test/tokenizer/E0009-binary-invalid.txt
0b2
===== err =====
/test/tokenizer/E0009-binary-invalid.txt:1:1: SyntaxError: E0009 - Invalid binary integer literal
1 | 0b2
  | ~~
